# otus-hw2

./: .gitignore  .travis.yml  CMakeLists.txt  ip_filter.cpp  ip_filter_tests.cpp
include/: aliases.h  filter.h  parser.h  printer.h  sorter.h
src/: algoDraft.cpp  filter.cpp  ip_filter.cpp  main.cpp  parser.cpp  printer.cpp  sorter.cpp
test/: ip_filter_tests.cpp
